change Time colulmn type to Datetime and Hour and rename columns to Hour

--- a/term 5/3 - Air pollution/exercise_solution.ipynb
+++ b/term 5/3 - Air pollution/exercise_solution.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +146,7 @@
        "1  0,7255          NaN          NaN  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1014,7 +1014,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -1038,7 +1038,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1051,7 +1051,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -1075,7 +1075,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1088,7 +1088,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -1158,7 +1158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1166,13 +1166,72 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4.2 change 'Time' column to 'Hour'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# replace '.' with ':'  for modify format\n",
+    "df['Time']=df['Time'].str.replace('.', ':')\n",
+    "\n",
+    "# change 'Time' column formate to datetime and Hour\n",
+    "df['Time'] = (pd.to_datetime(df['Time'], format='%H:%M:%S').dt.hour)\n",
+    "\n",
+    "# Rename columns from 'Time' to 'Hour'\n",
+    "df=df.rename(columns={ 'Time' : 'Hour' })"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 9357 entries, 0 to 9356\n",
+      "Data columns (total 15 columns):\n",
+      " #   Column         Non-Null Count  Dtype         \n",
+      "---  ------         --------------  -----         \n",
+      " 0   Date           9357 non-null   datetime64[ns]\n",
+      " 1   Hour           9357 non-null   int32         \n",
+      " 2   CO(GT)         9357 non-null   object        \n",
+      " 3   PT08.S1(CO)    9357 non-null   float64       \n",
+      " 4   NMHC(GT)       9357 non-null   float64       \n",
+      " 5   C6H6(GT)       9357 non-null   object        \n",
+      " 6   PT08.S2(NMHC)  9357 non-null   float64       \n",
+      " 7   NOx(GT)        9357 non-null   float64       \n",
+      " 8   PT08.S3(NOx)   9357 non-null   float64       \n",
+      " 9   NO2(GT)        9357 non-null   float64       \n",
+      " 10  PT08.S4(NO2)   9357 non-null   float64       \n",
+      " 11  PT08.S5(O3)    9357 non-null   float64       \n",
+      " 12  T              9357 non-null   object        \n",
+      " 13  RH             9357 non-null   object        \n",
+      " 14  AH             9357 non-null   object        \n",
+      "dtypes: datetime64[ns](1), float64(8), int32(1), object(5)\n",
+      "memory usage: 1.1+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "df."
-   ]
+   "source": []
   }
  ],
  "metadata": {
