change Co(GT) colulmn type to float

--- a/term 5/3 - Air pollution/exercise_solution.ipynb
+++ b/term 5/3 - Air pollution/exercise_solution.ipynb
@@ -1182,15 +1182,63 @@
     "df['Time']=df['Time'].str.replace('.', ':')\n",
     "\n",
     "# change 'Time' column formate to datetime and Hour\n",
-    "df['Time'] = (pd.to_datetime(df['Time'], format='%H:%M:%S').dt.hour)\n",
+    "df['Time'] = pd.to_datetime(df['Time'], format='%H:%M:%S').dt.hour\n",
     "\n",
     "# Rename columns from 'Time' to 'Hour'\n",
     "df=df.rename(columns={ 'Time' : 'Hour' })"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4.3 'Co(GT)' column"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# replace ',' with '.'\n",
+    "df['CO(GT)'] = df['CO(GT)'].str.replace(',', '.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       2.6\n",
+       "1       2.0\n",
+       "2       2.2\n",
+       "3       2.2\n",
+       "4       1.6\n",
+       "       ... \n",
+       "9352    3.1\n",
+       "9353    2.4\n",
+       "9354    2.4\n",
+       "9355    2.1\n",
+       "9356    2.2\n",
+       "Name: CO(GT), Length: 9357, dtype: float64"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['CO(GT)'].astype('float') #= df['CO(GT)'].dtype('Float')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
