--- a/term 5/3 - Air pollution/exercise_solution.ipynb
+++ b/term 5/3 - Air pollution/exercise_solution.ipynb
@@ -1181,7 +1181,7 @@
     "# replace '.' with ':'  for modify format\n",
     "df['Time']=df['Time'].str.replace('.', ':')\n",
     "\n",
-    "# change 'Time' column formate to datetime and Hour\n",
+    "# change 'Time' column type to datetime and Hour\n",
     "df['Time'] = pd.to_datetime(df['Time'], format='%H:%M:%S').dt.hour\n",
     "\n",
     "# Rename columns from 'Time' to 'Hour'\n",
@@ -1192,53 +1192,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 4.3 'Co(GT)' column"
+    "### 4.3 change 'Co(GT)' column type"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# replace ',' with '.'\n",
-    "df['CO(GT)'] = df['CO(GT)'].str.replace(',', '.')"
+    "df['CO(GT)'] = df['CO(GT)'].str.replace(',', '.')\n",
+    "\n",
+    "# change 'CO(GT)' column type to float\n",
+    "df['CO(GT)'] = df['CO(GT)'].astype('float')"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 57,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0       2.6\n",
-       "1       2.0\n",
-       "2       2.2\n",
-       "3       2.2\n",
-       "4       1.6\n",
-       "       ... \n",
-       "9352    3.1\n",
-       "9353    2.4\n",
-       "9354    2.4\n",
-       "9355    2.1\n",
-       "9356    2.2\n",
-       "Name: CO(GT), Length: 9357, dtype: float64"
-      ]
-     },
-     "execution_count": 57,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "df['CO(GT)'].astype('float') #= df['CO(GT)'].dtype('Float')"
+    "### 4.4 change 'C6H6(GT)' column type"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -1252,7 +1238,7 @@
       "---  ------         --------------  -----         \n",
       " 0   Date           9357 non-null   datetime64[ns]\n",
       " 1   Hour           9357 non-null   int32         \n",
-      " 2   CO(GT)         9357 non-null   object        \n",
+      " 2   CO(GT)         9357 non-null   float64       \n",
       " 3   PT08.S1(CO)    9357 non-null   float64       \n",
       " 4   NMHC(GT)       9357 non-null   float64       \n",
       " 5   C6H6(GT)       9357 non-null   object        \n",
@@ -1265,7 +1251,7 @@
       " 12  T              9357 non-null   object        \n",
       " 13  RH             9357 non-null   object        \n",
       " 14  AH             9357 non-null   object        \n",
-      "dtypes: datetime64[ns](1), float64(8), int32(1), object(5)\n",
+      "dtypes: datetime64[ns](1), float64(9), int32(1), object(4)\n",
       "memory usage: 1.1+ MB\n"
      ]
     }
