change object coulmns type to float

--- a/term 5/3 - Air pollution/exercise_solution.ipynb
+++ b/term 5/3 - Air pollution/exercise_solution.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +146,7 @@
        "1  0,7255          NaN          NaN  "
       ]
      },
-     "execution_count": 40,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1014,7 +1014,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -1038,7 +1038,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1051,7 +1051,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -1075,7 +1075,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1088,7 +1088,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -1158,7 +1158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1174,7 +1174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1197,15 +1197,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# replace ',' with '.'\n",
-    "df['CO(GT)'] = df['CO(GT)'].str.replace(',', '.')\n",
-    "\n",
-    "# change 'CO(GT)' column type to float\n",
-    "df['CO(GT)'] = df['CO(GT)'].astype('float')"
+    "def change_columns_type (columns):\n",
+    "    for col in columns:\n",
+    "        # replace ',' with '.'\n",
+    "        df[col] = df[col].str.replace(',', '.')\n",
+    "        # change 'CO(GT)' column type to float\n",
+    "        df[col] = df[col].astype('float')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "change_columns_type(['CO(GT)', 'C6H6(GT)', 'T', 'RH', 'AH'])"
    ]
   },
   {
@@ -1217,14 +1227,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# replace ',' with '.'\n",
+    "df['C6H6(GT)'] = df['C6H6(GT)'].str.replace(',', '.')\n",
+    "\n",
+    "# change 'C6H6(GT)' column type to float\n",
+    "df['C6H6(GT)'] = df['C6H6(GT)'].astype('float')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4.5 change 'T' column type"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       0,7578\n",
+       "1       0,7255\n",
+       "2       0,7502\n",
+       "3       0,7867\n",
+       "4       0,7888\n",
+       "         ...  \n",
+       "9352    0,7568\n",
+       "9353    0,7119\n",
+       "9354    0,6406\n",
+       "9355    0,5139\n",
+       "9356    0,5028\n",
+       "Name: AH, Length: 9357, dtype: object"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['AH']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# replace ',' with '.'\n",
+    "df['C6H6(GT)'] = df['C6H6(GT)'].str.replace(',', '.')\n",
+    "\n",
+    "# change 'C6H6(GT)' column type to float\n",
+    "df['C6H6(GT)'] = df['C6H6(GT)'].astype('float')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -1232,27 +1299,29 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Index: 9357 entries, 0 to 9356\n",
-      "Data columns (total 15 columns):\n",
-      " #   Column         Non-Null Count  Dtype         \n",
-      "---  ------         --------------  -----         \n",
-      " 0   Date           9357 non-null   datetime64[ns]\n",
-      " 1   Hour           9357 non-null   int32         \n",
-      " 2   CO(GT)         9357 non-null   float64       \n",
-      " 3   PT08.S1(CO)    9357 non-null   float64       \n",
-      " 4   NMHC(GT)       9357 non-null   float64       \n",
-      " 5   C6H6(GT)       9357 non-null   object        \n",
-      " 6   PT08.S2(NMHC)  9357 non-null   float64       \n",
-      " 7   NOx(GT)        9357 non-null   float64       \n",
-      " 8   PT08.S3(NOx)   9357 non-null   float64       \n",
-      " 9   NO2(GT)        9357 non-null   float64       \n",
-      " 10  PT08.S4(NO2)   9357 non-null   float64       \n",
-      " 11  PT08.S5(O3)    9357 non-null   float64       \n",
-      " 12  T              9357 non-null   object        \n",
-      " 13  RH             9357 non-null   object        \n",
-      " 14  AH             9357 non-null   object        \n",
-      "dtypes: datetime64[ns](1), float64(9), int32(1), object(4)\n",
-      "memory usage: 1.1+ MB\n"
+      "RangeIndex: 9471 entries, 0 to 9470\n",
+      "Data columns (total 17 columns):\n",
+      " #   Column         Non-Null Count  Dtype  \n",
+      "---  ------         --------------  -----  \n",
+      " 0   Date           9357 non-null   object \n",
+      " 1   Time           9357 non-null   object \n",
+      " 2   CO(GT)         9357 non-null   float64\n",
+      " 3   PT08.S1(CO)    9357 non-null   float64\n",
+      " 4   NMHC(GT)       9357 non-null   float64\n",
+      " 5   C6H6(GT)       9357 non-null   float64\n",
+      " 6   PT08.S2(NMHC)  9357 non-null   float64\n",
+      " 7   NOx(GT)        9357 non-null   float64\n",
+      " 8   PT08.S3(NOx)   9357 non-null   float64\n",
+      " 9   NO2(GT)        9357 non-null   float64\n",
+      " 10  PT08.S4(NO2)   9357 non-null   float64\n",
+      " 11  PT08.S5(O3)    9357 non-null   float64\n",
+      " 12  T              9357 non-null   float64\n",
+      " 13  RH             9357 non-null   float64\n",
+      " 14  AH             9357 non-null   float64\n",
+      " 15  Unnamed: 15    0 non-null      float64\n",
+      " 16  Unnamed: 16    0 non-null      float64\n",
+      "dtypes: float64(15), object(2)\n",
+      "memory usage: 1.2+ MB\n"
      ]
     }
    ],
