--- a/term 5/3 - Air pollution/exercise_solution.ipynb
+++ b/term 5/3 - Air pollution/exercise_solution.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +146,7 @@
        "1  0,7255          NaN          NaN  "
       ]
      },
-     "execution_count": 83,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -516,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1014,7 +1014,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -1038,7 +1038,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1051,7 +1051,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -1075,7 +1075,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1088,7 +1088,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -1128,7 +1128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -1136,11 +1136,11 @@
       "text/plain": [
        "Index(['Date', 'Time', 'CO(GT)', 'PT08.S1(CO)', 'NMHC(GT)', 'C6H6(GT)',\n",
        "       'PT08.S2(NMHC)', 'NOx(GT)', 'PT08.S3(NOx)', 'NO2(GT)', 'PT08.S4(NO2)',\n",
-       "       'PT08.S5(O3)', 'T', 'RH', 'AH', 'Unnamed: 15', 'Unnamed: 16'],\n",
+       "       'PT08.S5(O3)', 'T', 'RH', 'AH'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1158,7 +1158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1174,7 +1174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1192,26 +1192,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 4.3 change 'Co(GT)' column type"
+    "### 4.3 change columns type from object to float for 'CO(GT)', 'C6H6(GT)', 'T', 'RH', 'AH'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
     "def change_columns_type (columns):\n",
+    "    '''\n",
+    "    Convert specified columns to numeric type, handling decimal separators.\n",
+    "    Parameters:\n",
+    "    -----------\n",
+    "    columns: List of column names to convert\n",
+    "    '''\n",
     "    for col in columns:\n",
-    "        # replace ',' with '.'\n",
+    "        # replace ',' with '.' for each column\n",
     "        df[col] = df[col].str.replace(',', '.')\n",
-    "        # change 'CO(GT)' column type to float\n",
+    "        \n",
+    "        # change 'col' column type to float\n",
     "        df[col] = df[col].astype('float')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1222,76 +1229,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 4.4 change 'C6H6(GT)' column type"
+    "### 4.4 Replace -200 with NaN for Dataset\n",
+    "**columns effected** : all columns except *Data* and *Hour*"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# replace ',' with '.'\n",
-    "df['C6H6(GT)'] = df['C6H6(GT)'].str.replace(',', '.')\n",
-    "\n",
-    "# change 'C6H6(GT)' column type to float\n",
-    "df['C6H6(GT)'] = df['C6H6(GT)'].astype('float')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 4.5 change 'T' column type"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 68,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0       0,7578\n",
-       "1       0,7255\n",
-       "2       0,7502\n",
-       "3       0,7867\n",
-       "4       0,7888\n",
-       "         ...  \n",
-       "9352    0,7568\n",
-       "9353    0,7119\n",
-       "9354    0,6406\n",
-       "9355    0,5139\n",
-       "9356    0,5028\n",
-       "Name: AH, Length: 9357, dtype: object"
-      ]
-     },
-     "execution_count": 68,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df['AH']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 64,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# replace ',' with '.'\n",
-    "df['C6H6(GT)'] = df['C6H6(GT)'].str.replace(',', '.')\n",
-    "\n",
-    "# change 'C6H6(GT)' column type to float\n",
-    "df['C6H6(GT)'] = df['C6H6(GT)'].astype('float')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
@@ -1299,34 +1243,354 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 9471 entries, 0 to 9470\n",
-      "Data columns (total 17 columns):\n",
-      " #   Column         Non-Null Count  Dtype  \n",
-      "---  ------         --------------  -----  \n",
-      " 0   Date           9357 non-null   object \n",
-      " 1   Time           9357 non-null   object \n",
-      " 2   CO(GT)         9357 non-null   float64\n",
-      " 3   PT08.S1(CO)    9357 non-null   float64\n",
-      " 4   NMHC(GT)       9357 non-null   float64\n",
-      " 5   C6H6(GT)       9357 non-null   float64\n",
-      " 6   PT08.S2(NMHC)  9357 non-null   float64\n",
-      " 7   NOx(GT)        9357 non-null   float64\n",
-      " 8   PT08.S3(NOx)   9357 non-null   float64\n",
-      " 9   NO2(GT)        9357 non-null   float64\n",
-      " 10  PT08.S4(NO2)   9357 non-null   float64\n",
-      " 11  PT08.S5(O3)    9357 non-null   float64\n",
-      " 12  T              9357 non-null   float64\n",
-      " 13  RH             9357 non-null   float64\n",
-      " 14  AH             9357 non-null   float64\n",
-      " 15  Unnamed: 15    0 non-null      float64\n",
-      " 16  Unnamed: 16    0 non-null      float64\n",
-      "dtypes: float64(15), object(2)\n",
-      "memory usage: 1.2+ MB\n"
+      "Index: 9357 entries, 0 to 9356\n",
+      "Data columns (total 15 columns):\n",
+      " #   Column         Non-Null Count  Dtype         \n",
+      "---  ------         --------------  -----         \n",
+      " 0   Date           9357 non-null   datetime64[ns]\n",
+      " 1   Hour           9357 non-null   int32         \n",
+      " 2   CO(GT)         7674 non-null   object        \n",
+      " 3   PT08.S1(CO)    8991 non-null   object        \n",
+      " 4   NMHC(GT)       914 non-null    object        \n",
+      " 5   C6H6(GT)       8991 non-null   object        \n",
+      " 6   PT08.S2(NMHC)  8991 non-null   object        \n",
+      " 7   NOx(GT)        7718 non-null   object        \n",
+      " 8   PT08.S3(NOx)   8991 non-null   object        \n",
+      " 9   NO2(GT)        7715 non-null   object        \n",
+      " 10  PT08.S4(NO2)   8991 non-null   object        \n",
+      " 11  PT08.S5(O3)    8991 non-null   object        \n",
+      " 12  T              8991 non-null   object        \n",
+      " 13  RH             8991 non-null   object        \n",
+      " 14  AH             8991 non-null   object        \n",
+      "dtypes: datetime64[ns](1), int32(1), object(13)\n",
+      "memory usage: 1.1+ MB\n"
      ]
     }
    ],
    "source": [
+    "df.replace(-200, pd.NA, inplace= True)\n",
     "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Hour</th>\n",
+       "      <th>CO(GT)</th>\n",
+       "      <th>PT08.S1(CO)</th>\n",
+       "      <th>NMHC(GT)</th>\n",
+       "      <th>C6H6(GT)</th>\n",
+       "      <th>PT08.S2(NMHC)</th>\n",
+       "      <th>NOx(GT)</th>\n",
+       "      <th>PT08.S3(NOx)</th>\n",
+       "      <th>NO2(GT)</th>\n",
+       "      <th>PT08.S4(NO2)</th>\n",
+       "      <th>PT08.S5(O3)</th>\n",
+       "      <th>T</th>\n",
+       "      <th>RH</th>\n",
+       "      <th>AH</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>2004-11-03</td>\n",
+       "      <td>4</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1011.0</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>1.3</td>\n",
+       "      <td>527.0</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>1818.0</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>1197.0</td>\n",
+       "      <td>445.0</td>\n",
+       "      <td>10.1</td>\n",
+       "      <td>60.5</td>\n",
+       "      <td>0.7465</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34</th>\n",
+       "      <td>2004-12-03</td>\n",
+       "      <td>4</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>831.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>1.1</td>\n",
+       "      <td>506.0</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>1893.0</td>\n",
+       "      <td>32.0</td>\n",
+       "      <td>1134.0</td>\n",
+       "      <td>384.0</td>\n",
+       "      <td>6.1</td>\n",
+       "      <td>65.9</td>\n",
+       "      <td>0.6248</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39</th>\n",
+       "      <td>2004-12-03</td>\n",
+       "      <td>9</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1545.0</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>22.1</td>\n",
+       "      <td>1353.0</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>767.0</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>2058.0</td>\n",
+       "      <td>1588.0</td>\n",
+       "      <td>9.2</td>\n",
+       "      <td>56.2</td>\n",
+       "      <td>0.6561</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>58</th>\n",
+       "      <td>2004-03-13</td>\n",
+       "      <td>4</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1147.0</td>\n",
+       "      <td>56.0</td>\n",
+       "      <td>6.2</td>\n",
+       "      <td>821.0</td>\n",
+       "      <td>109.0</td>\n",
+       "      <td>1132.0</td>\n",
+       "      <td>83.0</td>\n",
+       "      <td>1412.0</td>\n",
+       "      <td>992.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>71.1</td>\n",
+       "      <td>0.7158</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>82</th>\n",
+       "      <td>2004-03-14</td>\n",
+       "      <td>4</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1130.0</td>\n",
+       "      <td>56.0</td>\n",
+       "      <td>5.2</td>\n",
+       "      <td>773.0</td>\n",
+       "      <td>70.0</td>\n",
+       "      <td>1130.0</td>\n",
+       "      <td>82.0</td>\n",
+       "      <td>1452.0</td>\n",
+       "      <td>1051.0</td>\n",
+       "      <td>12.1</td>\n",
+       "      <td>61.1</td>\n",
+       "      <td>0.8603</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9058</th>\n",
+       "      <td>2005-03-23</td>\n",
+       "      <td>4</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>993.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.3</td>\n",
+       "      <td>604.0</td>\n",
+       "      <td>85.0</td>\n",
+       "      <td>848.0</td>\n",
+       "      <td>65.0</td>\n",
+       "      <td>1160.0</td>\n",
+       "      <td>762.0</td>\n",
+       "      <td>14.5</td>\n",
+       "      <td>66.4</td>\n",
+       "      <td>1.0919</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9130</th>\n",
+       "      <td>2005-03-26</td>\n",
+       "      <td>4</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1122.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>811.0</td>\n",
+       "      <td>181.0</td>\n",
+       "      <td>641.0</td>\n",
+       "      <td>92.0</td>\n",
+       "      <td>1336.0</td>\n",
+       "      <td>1122.0</td>\n",
+       "      <td>16.2</td>\n",
+       "      <td>71.2</td>\n",
+       "      <td>1.3013</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9202</th>\n",
+       "      <td>2005-03-29</td>\n",
+       "      <td>4</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>883.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.3</td>\n",
+       "      <td>530.0</td>\n",
+       "      <td>63.0</td>\n",
+       "      <td>997.0</td>\n",
+       "      <td>46.0</td>\n",
+       "      <td>1102.0</td>\n",
+       "      <td>617.0</td>\n",
+       "      <td>13.7</td>\n",
+       "      <td>68.2</td>\n",
+       "      <td>1.0611</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9274</th>\n",
+       "      <td>2005-01-04</td>\n",
+       "      <td>4</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>818.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>473.0</td>\n",
+       "      <td>47.0</td>\n",
+       "      <td>1257.0</td>\n",
+       "      <td>41.0</td>\n",
+       "      <td>898.0</td>\n",
+       "      <td>323.0</td>\n",
+       "      <td>13.7</td>\n",
+       "      <td>48.8</td>\n",
+       "      <td>0.7606</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9346</th>\n",
+       "      <td>2005-04-04</td>\n",
+       "      <td>4</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>864.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>478.0</td>\n",
+       "      <td>52.0</td>\n",
+       "      <td>1116.0</td>\n",
+       "      <td>43.0</td>\n",
+       "      <td>958.0</td>\n",
+       "      <td>489.0</td>\n",
+       "      <td>11.8</td>\n",
+       "      <td>56.0</td>\n",
+       "      <td>0.7743</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1683 rows × 15 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           Date  Hour CO(GT) PT08.S1(CO) NMHC(GT) C6H6(GT) PT08.S2(NMHC)  \\\n",
+       "10   2004-11-03     4    NaN      1011.0     14.0      1.3         527.0   \n",
+       "34   2004-12-03     4    NaN       831.0     10.0      1.1         506.0   \n",
+       "39   2004-12-03     9    NaN      1545.0     <NA>     22.1        1353.0   \n",
+       "58   2004-03-13     4    NaN      1147.0     56.0      6.2         821.0   \n",
+       "82   2004-03-14     4    NaN      1130.0     56.0      5.2         773.0   \n",
+       "...         ...   ...    ...         ...      ...      ...           ...   \n",
+       "9058 2005-03-23     4    NaN       993.0      NaN      2.3         604.0   \n",
+       "9130 2005-03-26     4    NaN      1122.0      NaN      6.0         811.0   \n",
+       "9202 2005-03-29     4    NaN       883.0      NaN      1.3         530.0   \n",
+       "9274 2005-01-04     4    NaN       818.0      NaN      0.8         473.0   \n",
+       "9346 2005-04-04     4    NaN       864.0      NaN      0.8         478.0   \n",
+       "\n",
+       "     NOx(GT) PT08.S3(NOx) NO2(GT) PT08.S4(NO2) PT08.S5(O3)     T    RH      AH  \n",
+       "10      21.0       1818.0    34.0       1197.0       445.0  10.1  60.5  0.7465  \n",
+       "34      21.0       1893.0    32.0       1134.0       384.0   6.1  65.9  0.6248  \n",
+       "39      <NA>        767.0    <NA>       2058.0      1588.0   9.2  56.2  0.6561  \n",
+       "58     109.0       1132.0    83.0       1412.0       992.0   7.0  71.1  0.7158  \n",
+       "82      70.0       1130.0    82.0       1452.0      1051.0  12.1  61.1  0.8603  \n",
+       "...      ...          ...     ...          ...         ...   ...   ...     ...  \n",
+       "9058    85.0        848.0    65.0       1160.0       762.0  14.5  66.4  1.0919  \n",
+       "9130   181.0        641.0    92.0       1336.0      1122.0  16.2  71.2  1.3013  \n",
+       "9202    63.0        997.0    46.0       1102.0       617.0  13.7  68.2  1.0611  \n",
+       "9274    47.0       1257.0    41.0        898.0       323.0  13.7  48.8  0.7606  \n",
+       "9346    52.0       1116.0    43.0        958.0       489.0  11.8  56.0  0.7743  \n",
+       "\n",
+       "[1683 rows x 15 columns]"
+      ]
+     },
+     "execution_count": 148,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df['CO(GT)'].isnull()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "CO(GT)\n",
+       "0.1      33\n",
+       "0.2      45\n",
+       "0.3      98\n",
+       "0.4     160\n",
+       "0.5     217\n",
+       "       ... \n",
+       "9.9       1\n",
+       "10.1      1\n",
+       "10.2      2\n",
+       "11.5      1\n",
+       "11.9      1\n",
+       "Name: Hour, Length: 96, dtype: int64"
+      ]
+     },
+     "execution_count": 147,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# df[df['CO(GT)'].isnull()]\n",
+    "# df['CO(GT)'].group(df['Hour'])\n",
+    "# pd.DataFrame(df['CO(GT)'].groupby(df['Hour']))\n",
+    "df.groupby('CO(GT)')['Hour'].count()"
    ]
   },
   {
@@ -1334,7 +1598,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "'CO(GT)', 'PT08.S1(CO)', 'NMHC(GT)', 'C6H6(GT)', 'PT08.S2(NMHC)', 'NOx(GT)', 'PT08.S3(NOx)', 'NO2(GT)', 'PT08.S4(NO2)', 'PT08.S5(O3)', 'T', 'RH', 'AH'"
+   ]
   }
  ],
  "metadata": {
